--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -88,65 +88,20 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Generalist Bimanual Manipulation via Foundation Video Diffusion Models (VIDAR)</h1>
+          <h1 class="title is-1 publication-title">Embodied Video Foundation Model: VIDAR & AnyPos</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <!-- <a>Xuezhou Xu</a>*<sup>2</sup>, -->
-              <a href="https://github.com/yaofeng1998">Yao Feng</a>*<sup>1</sup>,</span>
-            <span class="author-block">
-              <a href="https://github.com/thkkk">Hengkai Tan</a>*<sup>1</sup>,</span>
-            <span class="author-block">
-              <a>Xinyi Mao</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Guodong Liu</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Shuhe Huang</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Chendong Xiang</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Hang Su</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Jun Zhu</a><sup>1</sup>
-            </span>
-          </div>
-
-          
-          <h1 class="title is-1 publication-title">AnyPos: Automated Task-Agnostic Actions for Bimanual Manipulation</h1>
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              <a href="https://github.com/thkkk">Hengkai Tan</a>*<sup>1</sup>,
-            </span>
-            <span class="author-block">
               <a href="https://github.com/yaofeng1998">Yao Feng</a>*<sup>1</sup>,
             </span>
             <span class="author-block">
-              <a>Xinyi Mao</a>*<sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Shuhe Huang</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Guodong Liu</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Zhongkai Hao</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Hang Su</a><sup>1</sup>,
-            </span>
-            <span class="author-block">
-              <a>Jun Zhu</a><sup>1</sup>
+              <a href="https://github.com/thkkk">Hengkai Tan</a>*<sup>1</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Tsinghua University</span>
-            <span class="author-block"><sup>*</sup>Equal contribution</span><br>
+            <span class="author-block"><sup>1</sup>Tsinghua University</span><br>
+            <span class="author-block"><sup>*</sup>Project Co-lead</span>
           </div>
 
           <!-- <div class="is-size-5 publication-authors">
@@ -228,6 +183,7 @@
 
           </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -315,12 +271,14 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     If you find our work helpful, please cite us:
-    <pre><code>@article{tan2024manibox,
-      title={ManiBox: Enhancing Spatial Grasping Generalization via Scalable Simulation Data Generation},
-      author={Tan, Hengkai and Xu, Xuezhou and Ying, Chengyang and Mao, Xinyi and Liu, Songming and Zhang, Xingxing and Su, Hang and Zhu, Jun},
-      journal={arXiv preprint arXiv:2411.01850},
-      year={2024}
-    }</code></pre>
+    <pre><code>
+      TODO:
+      Generalist Bimanual Manipulation via Foundation Video Diffusion Models
+      Yao Feng*#, Hengkai Tan*, Xinyi Mao, Guodong Liu, Shuhe Huang, Chendong Xiang, Hang Su, Jun Zhu
+      AnyPos: Automated Task-Agnostic Actions for Bimanual Manipulation
+      Hengkai Tan*#, Yao Feng*, Xinyi Mao, Shuhe Huang, Guodong Liu, Zhongkai Hao, Hang Su, Jun Zhu
+      #: Project Lead
+    </code></pre>
     Thank you!
   </div>
 </section>
