update VIDAR descriptions and figure caption size

--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -294,13 +294,13 @@
           <figure class="image">
             <img src="./assets/pdfs/vidar.svg" alt="VIDAR Architecture" style="max-width: 120%; height: auto;">
           </figure>
-          <p class="has-text-grey is-size-7">Figure 1: Overview of VIDAR.</p>
+          <p class="has-text-grey is-size-6">Figure 1: Overview of VIDAR.</p>
         </div>
         
         <div class="content has-text-justified">
           <p>
-            VIDAR is a foundation video diffusion model for video prediction and masked inverse dynamics model (MIDM) for action regression.
-            It is trained on 750K multi-view bimanual videos with test-time scaling (TTS) applied during testing, VIDAR can adapt to new robot platforms <strong>with only 20 minutes of demonstrations</strong> with state-of-the-art performance and generalize to unseen tasks with strong semantic understanding.
+            VIDAR includes a foundation video diffusion model for video prediction and a masked inverse dynamics model (MIDM) for action regression.
+            The video diffusion model is trained on 750K multi-view bimanual videos with test-time scaling (TTS) applied during testing, and it can adapt to new robot platforms <strong>with only 20 minutes of demonstrations</strong> with state-of-the-art performance and generalize to unseen tasks with strong semantic understanding.
           </p>
         </div>
 
@@ -308,7 +308,7 @@
           <figure class="image">
             <img src="./assets/pdfs/VIDAR_methods.png" alt="VIDAR Methods" style="max-width: 120%; height: auto;">
           </figure>
-          <p class="has-text-grey is-size-7">Figure 2: Methods of VIDAR.</p>
+          <p class="has-text-grey is-size-6">Figure 2: Methods of VIDAR.</p>
         </div>
         <!-- Key Techniques -->
         <div class="content has-text-justified">
@@ -338,7 +338,7 @@
           <figure class="image">
             <img src="./assets/pdfs/anypos.svg" alt="VIDAR Architecture" style="max-width: 120%; height: auto;">
           </figure>
-          <p class="has-text-grey is-size-7">Figure 3: Overview of AnyPos.</p>
+          <p class="has-text-grey is-size-6">Figure 3: Overview of AnyPos.</p>
         </div>
 
         <div class="content has-text-justified">
@@ -367,7 +367,7 @@
           <figure class="image">
             <img src="./assets/pdfs/anypos_method.svg" alt="VIDAR Architecture" style="max-width: 120%; height: auto;">
           </figure>
-          <p class="has-text-grey is-size-7">Figure 4: Methods of AnyPos. We obtain a task-agnostic training dataset covering the entire cubic workspace of dual robotic arms using ATARA. </p>
+          <p class="has-text-grey is-size-6">Figure 4: Methods of AnyPos. We obtain a task-agnostic training dataset covering the entire cubic workspace of dual robotic arms using ATARA. </p>
         </div>
         <!-- Key Techniques -->
         <div class="content has-text-justified">
