--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -91,8 +91,7 @@
           <h1 class="title is-1 publication-title">Embodied Video Foundation Model: VIDAR & AnyPos</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <!-- <a>Xuezhou Xu</a>*<sup>2</sup>, -->
-              <a href="https://github.com/yaofeng1998">Yao Feng</a>*<sup>1</sup>,
+              <a href="https://yaofeng1998.github.io">Yao Feng</a>*<sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://github.com/thkkk">Hengkai Tan</a>*<sup>1</sup>,
