--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -229,7 +229,7 @@
   </div>
 </section> -->
 
-div class="video-container mb-6" style="display: flex; justify-content: center;">
+<div class="video-container mb-6" style="display: flex; justify-content: center;">
   <video controls autoplay muted loop width="100%" style="max-width: 800px;">
     <!-- <source src="{{ '/assets/videos/VIDAR_AnyPos.mp4' | relative_url }}" type="video/mp4"> -->
     <source src="./assets/videos/demo.mp4"
