--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -374,7 +374,7 @@
         <div class="content has-text-justified">
           <h3 class="title is-4">ATARA: Automatically collect data of target robots! (4x speed)</h3>
           <div class="video-container mb-6" style="display: flex; justify-content: center;">
-            <video controls width="60%" style="max-width: 800px;">
+            <video controls autoplay muted loop width="60%" style="max-width: 800px;">
               <!-- <source src="{{ '/assets/videos/VIDAR_AnyPos.mp4' | relative_url }}" type="video/mp4"> -->
               <source src="./assets/videos/ATARA_episode_214_random_4x.mp4"
                               type="video/mp4">
