--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -94,7 +94,7 @@
               <a href="https://yaofeng1998.github.io">Yao Feng</a>*<sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://github.com/thkkk">Hengkai Tan</a>*<sup>1</sup>,
+              <a href="https://stormy-cheese-458.notion.site/Hengkai-Tan-22a9b6e0b5bb801782edc3771ff3ba37">Hengkai Tan</a>*<sup>1</sup>,
             </span>
             <br>
             <span class="author-block">
