update video and code

--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -171,12 +171,22 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/thkkk/manibox"
+                <a href="https://github.com/yaofeng1998/Vidar"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code & Data</span>
+                  <span>VIDAR</span>
+                  </a>
+              </span>
+
+              <span class="link-block">
+                <a href="https://github.com/EmbodiedFoundation/AnyPos"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>AnyPos</span>
                   </a>
               </span>
               
@@ -238,15 +248,6 @@
   </video>
 </div>
 
-<div class="video-container mb-6" style="display: flex; justify-content: center;">
-  <video controls autoplay muted loop width="100%" style="max-width: 800px;">
-    <!-- <source src="{{ '/assets/videos/VIDAR_AnyPos.mp4' | relative_url }}" type="video/mp4"> -->
-    <source src="./assets/videos/VIDAR_AnyPos.mp4"
-                    type="video/mp4">
-    <p>Your browser doesn't support HTML5 video. Here is a <a href="{{ '/assets/videos/VIDAR_AnyPos.mp4' | relative_url }}">link to the video</a> instead.</p>
-  </video>
-</div>
-
 
 <section class="section">
   <div class="container is-max-desktop">
@@ -281,7 +282,7 @@
                 Our experiments demonstrate that our VIDAR framework can generalize to unseen tasks and backgrounds with strong semantic understanding, surpassing state-of-the-art methods like VPP and UniPi.
               </li>
               <li>
-                We additionally integrate a video-conditioned action validation module to verify the feasibility of learned policies across diverse manipulation tasks, and we demonstrate that the AnyPos-ATARA pipeline yields a <strong>51% improvement</strong> in test accuracy and achieves <strong>30-40% higher success rates</strong> in downstream tasks such as lifting, pick-and-place, and clicking, using replay-based video validation
+                We additionally integrate a video-conditioned action validation module to verify the feasibility of learned policies across diverse manipulation tasks, and we demonstrate that the AnyPos-ATARA pipeline yields a <strong>51% improvement</strong> in test accuracy and achieves <strong>30-40% higher success rates</strong> in downstream tasks such as lifting, pick-and-place, and clicking, using replay-based video validation.
               </li>
             </ul>
           </item>
