--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -160,32 +160,6 @@
                 </a>
               </span>
 
-              <span class="link-block">
-              <a href="https://huggingface.co/datasets/embodiedfoundation/ATARA" class="external-link button is-normal is-rounded is-dark">
-                <span class="icon" style="font-size: 1.2em;">
-                  🤗
-                </span>
-                <span>ATARA Dataset</span>
-              </a>
-            </span>
-
-            <span class="link-block">
-              <a href="https://huggingface.co/embodiedfoundation/VIDAR" class="external-link button is-normal is-rounded is-dark">
-                <span class="icon" style="font-size: 1.2em;">
-                  🤗
-                </span>
-                <span>VIDAR</span>
-              </a>
-            </span>
-
-            <span class="link-block">
-              <a href="https://huggingface.co/embodiedfoundation/AnyPos" class="external-link button is-normal is-rounded is-dark">
-                <span class="icon" style="font-size: 1.2em;">
-                  🤗
-                </span>
-                <span>AnyPos</span>
-              </a>
-            </span>
               <!-- Video Link. -->
               <!-- <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
@@ -216,6 +190,36 @@
                   <span>AnyPos</span>
                   </a>
               </span>
+
+              <span class="link-block">
+              <a href="https://huggingface.co/datasets/embodiedfoundation/ATARA"
+                  class="external-link button is-normal is-rounded is-dark">
+                <span class="icon" style="font-size: 1.2em;">
+                  🤗
+                </span>
+                <span>ATARA Dataset</span>
+              </a>
+            </span>
+
+            <span class="link-block">
+              <a href="https://huggingface.co/embodiedfoundation/VIDAR"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon" style="font-size: 1.2em;">
+                  🤗
+                </span>
+                <span>VIDAR</span>
+              </a>
+            </span>
+
+            <span class="link-block">
+              <a href="https://huggingface.co/embodiedfoundation/AnyPos"
+                class="external-link button is-normal is-rounded is-dark">
+                <span class="icon" style="font-size: 1.2em;">
+                  🤗
+                </span>
+                <span>AnyPos</span>
+              </a>
+            </span>
               
               <!-- <span class="link-block">
                 <a href="https://mp.weixin.qq.com/s/p1WTlfR4bcsh5EQhbjuayg"
