--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -96,7 +96,10 @@
             <span class="author-block">
               <a href="https://stormy-cheese-458.notion.site/Hengkai-Tan-22a9b6e0b5bb801782edc3771ff3ba37">Hengkai Tan</a>*<sup>1</sup>,
             </span>
-            <br>
+            <div class="is-size-5 publication-authors">
+              <span class="author-block"><sup>*</sup>Project Co-lead</span>
+            </div>
+            <!-- <br> -->
             <span class="author-block">
               <a href="https://github.com/shhmxy2">Xinyi Mao</a><sup>1</sup>,
             </span>
@@ -122,7 +125,7 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Tsinghua University</span><br>
-            <span class="author-block"><sup>*</sup>Project Co-lead</span>
+            <!-- <span class="author-block"><sup>*</sup>Project Co-lead</span> -->
           </div>
 
           <!-- <div class="is-size-5 publication-authors">
@@ -221,8 +224,8 @@
               </a>
             </span>
               
-              <!-- <span class="link-block">
-                <a href="https://mp.weixin.qq.com/s/p1WTlfR4bcsh5EQhbjuayg"
+              <span class="link-block">
+                <a href="https://mp.weixin.qq.com/s/AGOcR7oiYSIQ6zbmFdswgw"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-external-link-alt"></i>
@@ -231,7 +234,7 @@
                 </a>
               </span>
 
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href="https://zhuanlan.zhihu.com/p/15565509532"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -382,6 +385,14 @@
     <div class="columns is-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Anypos: Automated Task-Agnostic Actions for Bimanual Manipulation</h2>
+
+        <!-- pic -->
+        <div class="has-text-centered my-5">
+          <figure class="image">
+            <img src="./assets/vidar_anypos/vgm_deploy_compare.png" alt="The objective of VLAs" style="max-width: 120%; height: auto;">
+          </figure>
+          <p class="has-text-grey is-size-6">Figure: From dream world prediction to real world execution.</p>
+        </div>
 
         <!-- pic -->
         <div class="has-text-centered my-5">
