--- a/vidar_anypos.html
+++ b/vidar_anypos.html
@@ -276,12 +276,19 @@
 <div class="video-container mb-6" style="display: flex; justify-content: center;">
   <video controls autoplay muted loop width="100%" style="max-width: 800px;">
     <!-- <source src="{{ '/assets/videos/Vidar_AnyPos.mp4' | relative_url }}" type="video/mp4"> -->
+    <source src="./assets/videos/demo_life_compressed.mp4"
+                    type="video/mp4">
+    <p>Your browser doesn't support HTML5 video. Here is a <a href="{{ '/assets/videos/demo.mp4' | relative_url }}">link to the video</a> instead.</p>
+  </video>
+</div>
+<div class="video-container mb-6" style="display: flex; justify-content: center;">
+  <video controls autoplay muted loop width="100%" style="max-width: 800px;">
+    <!-- <source src="{{ '/assets/videos/Vidar_AnyPos.mp4' | relative_url }}" type="video/mp4"> -->
     <source src="./assets/videos/demo.mp4"
                     type="video/mp4">
     <p>Your browser doesn't support HTML5 video. Here is a <a href="{{ '/assets/videos/demo.mp4' | relative_url }}">link to the video</a> instead.</p>
   </video>
 </div>
-
 
 <section class="section">
   <div class="container is-max-desktop">
